# video_quality_eval

./: README.md  pyproject.toml
src/video_quality_eval/: main.py
